--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Avocado1</string>
+    <string name="app_name"></string>
+    <string name="Calendar_API_KEY">AIzaSyDUGzt27EWNyosxT0qr-0X_awsslSfBhEM</string>
     <string name="title_activity_home_page">HomePage</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
